--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Programmer
+email: say892@gmail.com
+url: https://say892.github.io
+description: "Just a programmer trying to have fun in school by making games."
+skills: "Programmer - Game Development - Teacher"
+meta_author: Krause Ryan
 
 # Google webmaster tools
 google_verify:
