--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Programmer
+title: Ryan Krause
 email: say892@gmail.com
 url: https://say892.github.io
 description: "Just a programmer trying to have fun in school by making games."
-skills: "Programmer - Game Development - Teacher"
+skills: "Programmer - Game Developer - Educator"
 meta_author: Krause Ryan
 
 # Google webmaster tools
@@ -31,7 +31,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Ryan Krause
   location: Location
   social: Around the Web
   credits: Credits
@@ -39,20 +39,24 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: http://twitter.com/RyanDKrause
+  - title: linkedin
+    url: http://www.linkedin.com/in/ryandkrause
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/say892
+  #- title: facebook
+  #  url:
+  #- title: stack-overflow
+  #  url: http://stackoverflow.com/questions/tagged/jekyll
+  #- title: bitbucket
+  #  url: http://bitbucket.org/jekyll
+  #- title: github
+  #  url: http://github.com/jekyll
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Iowa State University (School)
+  - line: Naperville, IL (Home)
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
