--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Ryan Krause
+title: Ryan D. Krause
 email: say892@gmail.com
 url: https://say892.github.io
 description: "Just a programmer trying to have fun in school by making games."
 skills: "Programmer - Game Developer - Educator"
-meta_author: Krause Ryan
+meta_author: Krause Ryan D.
 
 # Google webmaster tools
 google_verify:
@@ -31,7 +31,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Ryan Krause
+  copyright: Ryan D. Krause
   location: Location
   social: Around the Web
   credits: Credits
